# aoc2024

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  run.py
aoc2024/aoc2024/1/: part1.py  part2.py
aoc2024/day_1/: part_1.py  part_2.py
aoc2024/day_2/: part_1.py  part_2.py
aoc2024/day_3/: part_1.py  part_2.py
aoc2024/day_4/: part_1.py  part_2.py
aoc2024/day_5/: part_1.py  part_2.py
aoc2024/day_6/: part_1.py  part_2.py
aoc2024/day_template/: part_1.py
