[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Duco Sebel <74970928+DCSBL@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^4.0.1"
pre-commit-hooks = "^5.0.0"
yamllint = "^1.35.1"
codespell = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
